--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,4 +1,12 @@
-.item.purchased {
-  background-color: #d17d7c;
+.task.completed {
+  background-color: black;
   text-decoration: line-through;
 }
+
+.task {
+  background-color: #e64944;
+  width: 45%;
+  text-align: left;
+  margin: 4px 0;
+  padding-left: 8px;
+  cursor: pointer;
