--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,12 +1,28 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+
 .task.completed {
-  background-color: black;
+  background-color: white;
   text-decoration: line-through;
 }
 
 .task {
-  background-color: #e64944;
-  width: 45%;
+  background-color: white;
+  width: 65%;
   text-align: left;
-  margin: 4px 0;
-  padding-left: 8px;
+  margin: 8px;
+  padding: 8px;
   cursor: pointer;
+  text-align: center;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Indie Flower', cursive;
+}
+
+body {
+  background-image: url(http://api.thumbr.it/whitenoise-361x370.png?background=ffffffff&noise=5c5c5c&density=13&opacity=62);
+}
